# javarush_aibot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Project Requirements.md  README.md  celery_worker.py  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 9eacd8a6fb8a_add_content_hash.py  ceaa3342c952_init.py
app/: __init__.py  config.py  db.py  filters.py  main.py  models.py  tasks.py  utils.py
app/ai/: __init__.py  generator.py  openai_client.py
app/api/: __init__.py  endpoints.py  generate.py  keywords.py  posts.py  schemas.py  sources.py
app/news_parser/: __init__.py  base.py  registry.py  sites.py  telegram.py
app/telegram/: __init__.py  client.py  publisher.py
tests/: __init__.py  conftest.py  test_api_generate.py  test_filters.py  test_keywords.py  test_openai_client.py  test_pipeline.py  test_posts.py  test_publisher.py  test_registry.py  test_sites_parsing.py  test_sources.py  test_telegram_parser.py
