[project]
name = "javarush-aibot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.0",
    "feedparser>=6.0.12",
    "loguru>=0.7.3",
    "pydantic-settings>=2.14.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn>=0.45.0",
    "httpx>=0.28.1",
    "celery>=5.6.3",
    "redis>=7.4.0",
    "telethon>=1.43.2",
]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
]

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = ["alembic/versions/"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "UP"]
ignore = ["B008"]

fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["app"]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
]
reportMissingTypeStubs = false
reportUnknownMemberType = false
